--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="gameScreen">
             <!-- Question Card -->
             <div class="question-card">
-                <h2 id="questionText">Si Euge pudiera tener un superpoder, cual eligiria?</h2>
+                <h2 id="questionText">Cual es el segundo nombre de Euge?</h2>
             </div>
 
             <!-- Answer Cards -->
